calendar.css
table, th, td {
    border: 1px solid black;
}

td.month {
    vertical-align: baseline;
}

td.weekid {
    text-align: center;
}


td.status {
    width: 10px;
}


tr.weekend {
    background-color: #A9A9A9;
}


td.férié {
    background-color: #FF0000;
}

/* Color holidays but not weekends */
tr.weekday td.vacancesscolaires {
    background-color: #6495ED;
}

